<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WidetechPrueba</string>
    <string name="action_settings">Settings</string>
    
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="update">Update</string>
    <string name="logout">Log out</string>
    
    <string name="fname">Name</string>
    <string name="lname">Lastname</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>

</resources>
