<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="co.widetech.widetechprueba.activities.SignUpActivity"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
	        <EditText 
	            android:id="@+id/fname"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/username"/>
	        <EditText 
	            android:id="@+id/lname"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/lname" />
	        <EditText 
	            android:id="@+id/email"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/email"
	            android:inputType="textEmailAddress"/>
	        <EditText 
	            android:id="@+id/password"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/password"
	            android:inputType="textPassword" />
	        <EditText 
	            android:id="@+id/phone"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/phone"
	            android:inputType="phone" />
	        <EditText 
	            android:id="@+id/address"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/address" />
        
        </LinearLayout></ScrollView>
        <LinearLayout 
        	android:orientation="horizontal"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content">
	        <Button 
	            android:id="@+id/accept_button"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/accept"
	            android:onClick="onButtonPressed"/>
	        
	        <Button 
	            android:id="@+id/cancel_button"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/cancel"
	            android:onClick="onButtonPressed"/>
        
        </LinearLayout>
        
</LinearLayout>
